crates/podling-types/tests/snapshots/schema_snapshot__analysis.snap
---
source: crates/podling-types/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Envelope",
  "type": "object",
  "properties": {
    "body": {
      "$ref": "#/$defs/AnalysisReport"
    },
    "kind": {
      "$ref": "#/$defs/ArtifactKind"
    },
    "schema_version": {
      "type": "integer",
      "format": "uint32",
      "minimum": 0
    }
  },
  "required": [
    "schema_version",
    "kind",
    "body"
  ],
  "$defs": {
    "AnalysisReport": {
      "type": "object",
      "properties": {
        "findings": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/Finding"
          }
        }
      },
      "required": [
        "findings"
      ]
    },
    "ArtifactKind": {
      "type": "string",
      "enum": [
        "episode",
        "documents",
        "chunks",
        "claims",
        "ledger",
        "script",
        "analysis",
        "audio"
      ]
    },
    "Finding": {
      "type": "object",
      "properties": {
        "analyser": {
          "type": "string"
        },
        "message": {
          "type": "string"
        },
        "severity": {
          "$ref": "#/$defs/Severity"
        },
        "turn": {
          "description": "Index into the script's turns, when the finding is about one turn.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint",
          "minimum": 0
        }
      },
      "required": [
        "analyser",
        "severity",
        "message"
      ]
    },
    "Severity": {
      "type": "string",
      "enum": [
        "info",
        "warning",
        "error"
      ]
    }
  }
}
