crates/podling-types/tests/snapshots/schema_snapshot__episode.snap
---
source: crates/podling-types/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "EpisodeSpec",
  "type": "object",
  "properties": {
    "analysers": {
      "type": "array",
      "default": [],
      "items": {
        "$ref": "#/$defs/AnalyserConfig"
      }
    },
    "embedding": {
      "description": "Embeds claims and source sentences so the NLI stages can pick which\npairs to compare. Needs `nli` too; without both, claims merge only by\nexact wording and every piece of evidence is the claim's own extraction.",
      "anyOf": [
        {
          "$ref": "#/$defs/EmbeddingConfig"
        },
        {
          "type": "null"
        }
      ]
    },
    "llm": {
      "$ref": "#/$defs/LlmConfig"
    },
    "mode": {
      "$ref": "#/$defs/Mode",
      "default": "non_fiction"
    },
    "nli": {
      "description": "Judges whether one text entails or contradicts another. Needs\n`embedding` too.",
      "anyOf": [
        {
          "$ref": "#/$defs/NliConfig"
        },
        {
          "type": "null"
        }
      ]
    },
    "sources": {
      "type": "array",
      "items": {
        "$ref": "#/$defs/SourceSpec"
      }
    },
    "target_minutes": {
      "type": "integer",
      "format": "uint16",
      "maximum": 65535,
      "minimum": 0
    },
    "title": {
      "type": "string"
    },
    "topic": {
      "type": "string"
    }
  },
  "additionalProperties": false,
  "required": [
    "title",
    "topic",
    "target_minutes",
    "sources",
    "llm"
  ],
  "$defs": {
    "AnalyserConfig": {
      "oneOf": [
        {
          "description": "Checks every quote against its source, word for word.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "quote_verifier"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind"
          ]
        }
      ]
    },
    "EmbeddingConfig": {
      "oneOf": [
        {
          "description": "Deterministic offline stand-in: a hashed bag of words.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "fake"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind"
          ]
        },
        {
          "description": "Any server that speaks the OpenAI embeddings protocol\n(`POST {base_url}/embeddings`), e.g. Ollama with `nomic-embed-text`.",
          "type": "object",
          "properties": {
            "api_key_env": {
              "description": "Name of the environment variable holding the API key, never the\nkey itself. Leave unset for local servers that need none.",
              "type": [
                "string",
                "null"
              ]
            },
            "base_url": {
              "description": "Base URL up to and including the version segment, e.g.\n`http://localhost:11434/v1`. Must be `http://` or `https://`.",
              "type": "string"
            },
            "kind": {
              "type": "string",
              "const": "open_ai_compat"
            },
            "model": {
              "description": "Model name as the server knows it, e.g. `nomic-embed-text`.",
              "type": "string"
            },
            "timeout_secs": {
              "description": "Per-request timeout in seconds; the provider's default when unset.",
              "type": [
                "integer",
                "null"
              ],
              "format": "uint64",
              "minimum": 0
            }
          },
          "additionalProperties": false,
          "required": [
            "kind",
            "base_url",
            "model"
          ]
        }
      ]
    },
    "LlmConfig": {
      "oneOf": [
        {
          "description": "Deterministic offline stand-in, for development and tests.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "fake"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind"
          ]
        },
        {
          "description": "Any server that speaks the OpenAI chat-completions protocol: Ollama,\nllama.cpp `llama-server`, vLLM, LM Studio, OpenAI itself.\n\nThere is deliberately no field for the key itself, only the name of the\nenvironment variable that holds it, so an episode file stays free of\nsecrets and `deny_unknown_fields` rejects a pasted `api_key = \"...\"`.",
          "type": "object",
          "properties": {
            "api_key_env": {
              "description": "Name of the environment variable holding the API key. Leave unset\nfor local servers that need none.",
              "type": [
                "string",
                "null"
              ]
            },
            "base_url": {
              "description": "Base URL up to and including the version segment, e.g.\n`http://localhost:11434/v1`. Must be `http://` or `https://`.",
              "type": "string"
            },
            "kind": {
              "type": "string",
              "const": "open_ai_compat"
            },
            "max_output_tokens": {
              "description": "Cap on generated tokens per request; the server's default when unset.",
              "type": [
                "integer",
                "null"
              ],
              "format": "uint32",
              "minimum": 0
            },
            "model": {
              "description": "Model name as the server knows it, e.g. `llama3.1:8b`.",
              "type": "string"
            },
            "temperature": {
              "description": "Sampling temperature; the server's default when unset.",
              "type": [
                "number",
                "null"
              ],
              "format": "float"
            },
            "timeout_secs": {
              "description": "Per-request timeout in seconds; the provider's default when unset.",
              "type": [
                "integer",
                "null"
              ],
              "format": "uint64",
              "minimum": 0
            }
          },
          "additionalProperties": false,
          "required": [
            "kind",
            "base_url",
            "model"
          ]
        }
      ]
    },
    "Mode": {
      "description": "What kind of episode to make. Only non-fiction exists today; fiction modes\nare planned, so matches on this enum must stay open-ended.",
      "type": "string",
      "enum": [
        "non_fiction"
      ]
    },
    "NliConfig": {
      "oneOf": [
        {
          "description": "Deterministic offline stand-in: word containment, with a changed\nnumber counted as a contradiction.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "fake"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind"
          ]
        },
        {
          "description": "A local DeBERTa-v3 NLI cross-encoder, run on the CPU, e.g.\n`cross-encoder/nli-deberta-v3-base`.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "cross_encoder"
            },
            "model_dir": {
              "description": "Directory holding the model's `config.json`, `tokenizer.json` and\n`model.safetensors`. A relative path is resolved against the\nepisode file's directory.",
              "type": "string"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind",
            "model_dir"
          ]
        }
      ]
    },
    "SourceSpec": {
      "oneOf": [
        {
          "description": "Every `.md` / `.txt` file directly under `root`. A relative `root` is\nresolved against the episode file's directory.",
          "type": "object",
          "properties": {
            "independence_group": {
              "type": "string"
            },
            "kind": {
              "type": "string",
              "const": "local_files"
            },
            "root": {
              "type": "string"
            }
          },
          "additionalProperties": false,
          "required": [
            "kind",
            "root",
            "independence_group"
          ]
        }
      ]
    }
  }
}
