crates/podling-types/tests/snapshots/schema_snapshot__ledger.snap
---
source: crates/podling-types/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Envelope",
  "type": "object",
  "properties": {
    "body": {
      "$ref": "#/$defs/Ledger"
    },
    "kind": {
      "$ref": "#/$defs/ArtifactKind"
    },
    "schema_version": {
      "type": "integer",
      "format": "uint32",
      "minimum": 0
    }
  },
  "required": [
    "schema_version",
    "kind",
    "body"
  ],
  "$defs": {
    "ArtifactKind": {
      "type": "string",
      "enum": [
        "episode",
        "documents",
        "chunks",
        "claims",
        "ledger",
        "script",
        "analysis",
        "audio"
      ]
    },
    "ChunkId": {
      "description": "Identifies a chunk by its document and span.",
      "$ref": "#/$defs/ContentHash"
    },
    "Claim": {
      "description": "A single checkable statement. Claims whose text differs only in case or\nwhitespace share an id, so the same fact from two sources merges into one\nclaim with two pieces of evidence.",
      "type": "object",
      "properties": {
        "evidence": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/Evidence"
          }
        },
        "id": {
          "$ref": "#/$defs/ClaimId"
        },
        "text": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "text",
        "evidence"
      ]
    },
    "ClaimId": {
      "description": "Identifies a claim by its normalised text.",
      "$ref": "#/$defs/ContentHash"
    },
    "ClaimStatus": {
      "description": "Group names are sorted and de-duplicated in every variant.",
      "oneOf": [
        {
          "description": "Supported by at least two independent groups; nobody contradicts it.",
          "type": "object",
          "properties": {
            "groups": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "status": {
              "type": "string",
              "const": "corroborated"
            }
          },
          "required": [
            "status",
            "groups"
          ]
        },
        {
          "description": "Supported by exactly one independent group; nobody contradicts it.",
          "type": "object",
          "properties": {
            "group": {
              "type": "string"
            },
            "status": {
              "type": "string",
              "const": "single_source"
            }
          },
          "required": [
            "status",
            "group"
          ]
        },
        {
          "description": "At least one group contradicts it. `supporting` may be empty.",
          "type": "object",
          "properties": {
            "contradicting": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "status": {
              "type": "string",
              "const": "contested"
            },
            "supporting": {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          },
          "required": [
            "status",
            "supporting",
            "contradicting"
          ]
        },
        {
          "description": "No evidence either way.",
          "type": "object",
          "properties": {
            "status": {
              "type": "string",
              "const": "unsupported"
            }
          },
          "required": [
            "status"
          ]
        }
      ]
    },
    "ContentHash": {
      "type": "string",
      "pattern": "^[0-9a-f]{64}$"
    },
    "Evidence": {
      "description": "One chunk's position on a claim.",
      "type": "object",
      "properties": {
        "basis": {
          "description": "How this evidence was established, when it wasn't simply extracted from\nthe chunk in the claim's own words. Absent for plain extraction, so\nartifacts written without the NLI stages are unchanged.",
          "anyOf": [
            {
              "$ref": "#/$defs/EvidenceBasis"
            },
            {
              "type": "null"
            }
          ]
        },
        "chunk": {
          "$ref": "#/$defs/ChunkId"
        },
        "independence_group": {
          "type": "string"
        },
        "source": {
          "$ref": "#/$defs/SourceId"
        },
        "stance": {
          "$ref": "#/$defs/Stance"
        }
      },
      "required": [
        "chunk",
        "source",
        "independence_group",
        "stance"
      ]
    },
    "EvidenceBasis": {
      "description": "The audit trail behind a piece of evidence that exact wording alone didn't\nestablish. The stored scores are the ones that decided it, so a status can\nbe checked by hand against the thresholds.",
      "oneOf": [
        {
          "description": "The chunk stated the claim in other words, and the two wordings were\nmerged because each entails the other.",
          "type": "object",
          "properties": {
            "entailment_pm": {
              "description": "The weaker of the two entailment directions.",
              "$ref": "#/$defs/PerMille"
            },
            "kind": {
              "type": "string",
              "const": "merged"
            },
            "wording": {
              "description": "The chunk's own wording of the claim.",
              "type": "string"
            }
          },
          "required": [
            "kind",
            "wording",
            "entailment_pm"
          ]
        },
        {
          "description": "An NLI model read `premise` (a span of the chunk's document) and judged\nthat it supports or contradicts the claim.",
          "type": "object",
          "properties": {
            "contradiction_pm": {
              "$ref": "#/$defs/PerMille"
            },
            "entailment_pm": {
              "$ref": "#/$defs/PerMille"
            },
            "kind": {
              "type": "string",
              "const": "nli"
            },
            "premise": {
              "$ref": "#/$defs/TextSpan"
            },
            "similarity_pm": {
              "description": "How close the premise was to the claim when it was retrieved.",
              "$ref": "#/$defs/PerMille"
            }
          },
          "required": [
            "kind",
            "premise",
            "similarity_pm",
            "entailment_pm",
            "contradiction_pm"
          ]
        }
      ]
    },
    "Ledger": {
      "description": "Every entry's status is `classify(&entry.claim)`; deserialisation rejects a\nledger whose stored status disagrees with its evidence.",
      "type": "object",
      "properties": {
        "entries": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/LedgerEntry"
          }
        }
      },
      "required": [
        "entries"
      ]
    },
    "LedgerEntry": {
      "type": "object",
      "properties": {
        "claim": {
          "$ref": "#/$defs/Claim"
        },
        "status": {
          "$ref": "#/$defs/ClaimStatus"
        }
      },
      "required": [
        "claim",
        "status"
      ]
    },
    "PerMille": {
      "description": "A score from 0 to 1 in thousandths.",
      "type": "integer",
      "maximum": 1000,
      "minimum": 0
    },
    "SourceId": {
      "description": "Identifies a source (connector + locator), independent of its content.",
      "$ref": "#/$defs/ContentHash"
    },
    "Stance": {
      "type": "string",
      "enum": [
        "supports",
        "contradicts"
      ]
    },
    "TextSpan": {
      "description": "A half-open byte range `[start, end)` into a document's text.",
      "type": "object",
      "properties": {
        "end": {
          "type": "integer",
          "format": "uint",
          "minimum": 0
        },
        "start": {
          "type": "integer",
          "format": "uint",
          "minimum": 0
        }
      },
      "required": [
        "start",
        "end"
      ]
    }
  }
}
